packages/app/styles/globals.less
/* ... */
.dewo-md-editor-footer {
  border: 1px solid @border-color-base;
  border-top: none;
  border-bottom-left-radius: @border-radius-base;
  border-bottom-right-radius: @border-radius-base;

  padding: 4px;
  padding-left: 12px;
}

.ant-upload.ant-upload-drag.dewo-md-upload {
  background-color: unset;

  &.ant-upload.ant-upload-drag {
    border: none;
  }
  &.ant-upload.ant-upload-drag .ant-upload {
    padding: 0;
  }
}

.dewo-md-upload.ant-upload.ant-upload-drag .ant-upload-btn,
.dewo-md-upload.ant-upload.ant-upload-drag
  .ant-upload-btn
  .ant-upload-drag-container {
  display: block;
}

.dewo-lp-feature-tabs {
  .ant-tabs-nav:before {
    display: none;
  }

  img {
    border: 1px solid @primary-color;
    border-radius: @border-radius-base * 2;
    box-shadow: 0 0 10px 0 @primary-color;
  }
}

.dewo-settings-tabs {
  .ant-tabs-nav-list {
    display: flex;
    flex-direction: column;
    min-width: 192px;

    .ant-tabs-tab-active {
      background: @component-background;

      .ant-tabs-tab-btn {
        color: @text-color;
      }
    }
  }

  .ant-tabs-nav-more {
    display: none;
  }

  .ant-tabs-tab + .ant-tabs-tab {
    margin-left: 0;
  }

  .ant-tabs-tab {
    padding-right: 12px;
    padding-left: 12px;
  }
}

.dewo-task-reaction {
  padding-left: 4px;
  border-radius: @border-radius-base;
  border: 1px solid @border-color-base;

  transition: background, border 0.3s ease-in-out;

  &.dewo-task-reaction-selected {
    border: 1px solid @primary-color;
    background: @primary-color-25;
  }

  &.dewo-task-reaction-selectable {
    cursor: pointer;
  }

  .ant-badge .ant-badge-count {
    background: transparent;
    box-shadow: none;
    font-weight: 600;
  }

  .emojione {
    display: grid;
    place-items: center;
  }
}

.ant-tabs-top .ant-tabs-nav {
  margin: 0;
}

.dewo-tabs {
  & > .ant-tabs-nav > .ant-tabs-nav-wrap > .ant-tabs-nav-list {
    padding-left: 12px;
    padding-right: 12px;
  }

  .ant-tabs-nav-operations {
    display: none;
  }
}

.ant-tabs-left > .ant-tabs-content-holder {
  border: none;
}

.dewo-table-xs {
  margin-left: -8px;

  .ant-table.ant-table-small .ant-table-tbody > tr > td {
    padding: 2px 8px;
  }
}

.dewo-btn-highlight {
  flex: 1;
  padding: 4px;
  margin: 0 -4px;
  height: unset;
  display: flex;
  align-items: center;
}

.ant-dropdown-trigger:not([disabled]):hover {
  cursor: pointer;
}

.dewo-project-header {
  .ant-page-header-heading {
    justify-content: flex-start;
  }
  .ant-page-header-heading-left {
    flex-wrap: wrap;
    flex: unset;
  }
}

.dewo-discovery-table {

  .ant-table {
    background: transparent;
  }
  
  table {
    border-collapse: separate;
    border-spacing: 0 16px;
  }

  .ant-table-row {
    background: @component-background;
  }

  tr > th {
    border: none;
  }

  tr > td {
    border-top: 2px solid @primary-color;
    border-bottom: 2px solid @primary-color;

    &:first-child {
      border-left: 2px solid @primary-color;
      border-top-left-radius: @border-radius-base * 2;
      border-bottom-left-radius: @border-radius-base * 2;
    }

    &:last-child {
      border-right: 2px solid @primary-color;
      border-top-right-radius: @border-radius-base * 2;
      border-bottom-right-radius: @border-radius-base * 2;
    }
  }
}

.ant-modal-close {
  padding-right: 12px;
  .ant-modal-close-x {
    width: 32px;
  }
}

.dewo-task-options-button {
  position: absolute;
  top: 12px;
  right: 32px + 12px;
  width: 32px;
  height: 32px;
  padding: 0;
  color: @text-color-secondary;
}

